--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,13 @@
   <groupId>org.community</groupId>
   <artifactId>community</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
+		<version>2.0.3.RELEASE</version>
 		<relativePath /> 
 	</parent>
-<properties>
-        <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
-        <thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
-</properties>
   <dependencies>
  <!--引入thymeleaf-->
  <dependency>
@@ -54,7 +51,14 @@
     <artifactId>fastjson</artifactId>
     <version>1.2.57</version>
 </dependency>
- 
+<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.199</version>
+ <!--    <scope>test</scope> -->
+</dependency>
+
  
  <dependency>
      <groupId>org.springframework.boot</groupId>
