--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 github.client.id=d6c37b3d582b160e7a25
 github.client.secret=534d3d1327a8ba2391a602f1a1dca211c7617920
 github.redirect.uri=http://localhost:9999/callback
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
