--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,21 @@
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
  </dependency>
-
+  <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-jdbc</artifactId>
+ </dependency>
+ <!-- mysql -->
+ <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+</dependency>
+ <!-- 引入百度sdk -->
+<dependency>
+    <groupId>com.baidu.aip</groupId>
+    <artifactId>java-sdk</artifactId>
+    <version>4.8.0</version>
+</dependency>
  <!--bootstrap-->
  <!-- 在springboot中集成bootstrap https://blog.csdn.net/sinat_24048051/article/details/77531834-->
  <dependency>
@@ -56,10 +70,13 @@
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
     <version>1.4.199</version>
- <!--    <scope>test</scope> -->
 </dependency>
 
- 
+  <dependency>
+    <groupId>org.mybatis.spring.boot</groupId>
+    <artifactId>mybatis-spring-boot-starter</artifactId>
+    <version>2.1.0</version>
+</dependency>
  <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
