--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=ut
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.configuration.map-underscore-to-camel-case=true
