--- a/pom.xml
+++ b/pom.xml
@@ -77,18 +77,39 @@
     <artifactId>mybatis-spring-boot-starter</artifactId>
     <version>2.1.0</version>
 </dependency>
+<dependency>
+        <groupId>org.mybatis.generator</groupId>
+     	<artifactId>mybatis-generator-core</artifactId>
+        <version>1.3.5</version>
+</dependency>
 <!-- devtools 自动部署 -->
 <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-devtools</artifactId>
     <optional>true</optional>
 </dependency>
-<!-- lombok -->
+<!-- lombok 简化代码注解-->
 <dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
 		<version>1.18.10</version>
-	</dependency>
+</dependency>
+<!-- easypoi -->
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>3.2.0</version>
+        </dependency>
  <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
@@ -106,12 +127,6 @@
                     <user>root</user>
                     <password>root</password>
                 </configuration>
-                <dependencies>
-                    <dependency>
-						 <groupId>mysql</groupId>
-						 <artifactId>mysql-connector-java</artifactId>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
             <groupId>org.springframework.boot</groupId>
@@ -119,6 +134,22 @@
             <configuration>
                 <fork>true</fork>
             </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.mybatis.generator</groupId>
+          <artifactId>mybatis-generator-maven-plugin</artifactId>
+          <version>1.3.7</version>
+          <configuration>
+              <verbose>true</verbose>
+              <overwrite>true</overwrite>
+          </configuration>
+           <dependencies>
+                 <dependency>
+				    <groupId>mysql</groupId>
+				    <artifactId>mysql-connector-java</artifactId>
+				    <version>${mysql.version}</version>
+				</dependency>
+				</dependencies>
         </plugin>
         </plugins>
     </build>
