--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
